--- a/stm32h7disco-i2s-baremetal.ioc
+++ b/stm32h7disco-i2s-baremetal.ioc
@@ -5,26 +5,45 @@ CAD.provider=
 CortexM4.IPs=BDMA,DMA,FATFS_M4\:I,FREERTOS_M4\:I,IWDG2\:I,MDMA,NVIC2\:I,RCC,USB_DEVICE_M4\:I,USB_HOST_M4\:I,WWDG2\:I,USART1,FMC\:I,QUADSPI\:I,TIM8\:I,RTC\:I,TIM13\:I,TIM3\:I,DEBUG,PDM2PCM_M4\:I,PWR,RESMGR_UTILITY,SYS_M4\:I,CORTEX_M4\:I,OPENAMP_M4\:I,VREFBUF,GPIO
 CortexM7.IPs=BDMA\:I,DMA\:I,FATFS_M7\:I,FREERTOS_M7\:I,IWDG1\:I,MDMA\:I,NVIC1\:I,RCC\:I,USB_DEVICE_M7\:I,USB_HOST_M7\:I,WWDG1\:I,USART1\:I,CORTEX_M7\:I,DEBUG\:I,PDM2PCM_M7\:I,PWR\:I,RESMGR_UTILITY\:I,SYS\:I,OPENAMP_M7\:I,VREFBUF\:I,GPIO\:I,I2S1\:I,SDMMC1\:I
 CortexM7.Pins=PK5,PK4,PK6,PK3,PK2
-Dma.Request0=SPI1_RX
-Dma.RequestsNb=1
-Dma.SPI1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.0.EventEnable=DISABLE
-Dma.SPI1_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.SPI1_RX.0.Instance=DMA1_Stream0
-Dma.SPI1_RX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.SPI1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.0.Mode=DMA_CIRCULAR
-Dma.SPI1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
-Dma.SPI1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.SPI1_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_RX.0.RequestNumber=1
-Dma.SPI1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.SPI1_RX.0.SignalID=NONE
-Dma.SPI1_RX.0.SyncEnable=DISABLE
-Dma.SPI1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.SPI1_RX.0.SyncRequestNumber=1
-Dma.SPI1_RX.0.SyncSignalID=NONE
+Dma.Request0=SPI1_TX
+Dma.Request1=SPI1_RX
+Dma.RequestsNb=2
+Dma.SPI1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SPI1_RX.1.EventEnable=DISABLE
+Dma.SPI1_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_RX.1.Instance=DMA2_Stream0
+Dma.SPI1_RX.1.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_RX.1.Mode=DMA_CIRCULAR
+Dma.SPI1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_RX.1.RequestNumber=1
+Dma.SPI1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_RX.1.SignalID=NONE
+Dma.SPI1_RX.1.SyncEnable=DISABLE
+Dma.SPI1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_RX.1.SyncRequestNumber=1
+Dma.SPI1_RX.1.SyncSignalID=NONE
+Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI1_TX.0.EventEnable=DISABLE
+Dma.SPI1_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.SPI1_TX.0.Instance=DMA1_Stream0
+Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.SPI1_TX.0.Mode=DMA_CIRCULAR
+Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI1_TX.0.RequestNumber=1
+Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.SPI1_TX.0.SignalID=NONE
+Dma.SPI1_TX.0.SyncEnable=DISABLE
+Dma.SPI1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.SPI1_TX.0.SyncRequestNumber=1
+Dma.SPI1_TX.0.SyncSignalID=NONE
 FATFS.BSP.number=1
 FATFS0.BSP.STBoard=false
 FATFS0.BSP.api=Unknown
@@ -195,6 +214,7 @@ MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC1.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC1.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC1.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC1.ForceEnableDMAVector=true
 NVIC1.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -224,12 +244,12 @@ PA10.PinAttribute=CortexM7
 PA10.Signal=USART1_RX
 PA4.GPIOParameters=PinAttribute
 PA4.Locked=true
-PA4.Mode=Half_Duplex_Master_Rx
+PA4.Mode=Full_Duplex_Master
 PA4.PinAttribute=CortexM7
 PA4.Signal=I2S1_WS
 PA6.GPIOParameters=PinAttribute
 PA6.Locked=true
-PA6.Mode=Half_Duplex_Master_Rx
+PA6.Mode=Full_Duplex_Master
 PA6.PinAttribute=CortexM7
 PA6.Signal=I2S1_SDI
 PA8.GPIOParameters=GPIO_Label,PinAttribute
@@ -262,7 +282,7 @@ PB2.PinAttribute=CortexM4
 PB2.Signal=QUADSPI_CLK
 PB3\ (JTDO/TRACESWO).GPIOParameters=PinAttribute
 PB3\ (JTDO/TRACESWO).Locked=true
-PB3\ (JTDO/TRACESWO).Mode=Half_Duplex_Master_Rx
+PB3\ (JTDO/TRACESWO).Mode=Full_Duplex_Master
 PB3\ (JTDO/TRACESWO).PinAttribute=CortexM7
 PB3\ (JTDO/TRACESWO).Signal=I2S1_CK
 PC10.GPIOParameters=GPIO_Label,PinAttribute
@@ -346,6 +366,7 @@ PD2.PinAttribute=CortexM7
 PD2.Signal=SDMMC1_CMD
 PD7.GPIOParameters=PinAttribute
 PD7.Locked=true
+PD7.Mode=Full_Duplex_Master
 PD7.PinAttribute=CortexM7
 PD7.Signal=I2S1_SDO
 PD8.GPIOParameters=GPIO_Label,PinAttribute
@@ -822,7 +843,7 @@ ProjectManager.StackSize=M4-0x400,M7-0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true-CortexM7,5-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,6-MX_I2S1_Init-I2S1-false-HAL-true-CortexM7,7-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_DMA_Init-DMA-false-HAL-true-CortexM4,3-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM4,4-MX_RTC_Init-RTC-false-HAL-true-CortexM4,5-MX_TIM8_Init-TIM8-false-HAL-true-CortexM4,6-MX_TIM13_Init-TIM13-false-HAL-true-CortexM4,7-MX_FMC_Init-FMC-false-HAL-true-CortexM4,8-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false-CortexM7,2-MX_GPIO_Init-GPIO-false-HAL-true-CortexM7,3-MX_DMA_Init-DMA-false-HAL-true-CortexM7,4-MX_USART1_UART_Init-USART1-false-HAL-true-CortexM7,5-MX_I2S1_Init-I2S1-false-HAL-true-CortexM7,6-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true-CortexM7,7-MX_FATFS_Init-FATFS_M7-false-HAL-false-CortexM7,1-MX_GPIO_Init-GPIO-false-HAL-true-CortexM4,2-MX_DMA_Init-DMA-false-HAL-true-CortexM4,3-MX_RTC_Init-RTC-false-HAL-true-CortexM4,4-MX_TIM8_Init-TIM8-false-HAL-true-CortexM4,5-MX_TIM13_Init-TIM13-false-HAL-true-CortexM4,6-MX_FMC_Init-FMC-false-HAL-true-CortexM4,7-MX_QUADSPI_Init-QUADSPI-false-HAL-true-CortexM4,8-MX_USART1_UART_Init-USART1-true-HAL-false-CortexM4,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true-CortexM7,0-MX_CORTEX_M4_Init-CORTEX_M4-false-HAL-true-CortexM4
 RCC.ADCFreq_Value=75000000
 RCC.AHB12Freq_Value=200000000
 RCC.AHB4Freq_Value=200000000
